@@ -1,7 +1,8 @@
 0.8.3: BETA
      - fixed typos
      - added virtual link support to the FS/AFS/GFS backends
-     - fixed tempory space consumption bug after ZIP file upload in the SMB backend (thx Aleksander Gudalo) 
+     - fixed tempory space consumption bug after ZIP file upload in the SMB/DBB backend (thx Aleksander Gudalo) 
+     - added revision limit for a file to RCS backend (maxrevisions option)
 
 0.8.2: 2012/23/2
      - fixed doc
